<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail_restaurant.DetailRestaurantActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/r1" />

    <ImageButton
        android:id="@+id/backToMain"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/ic_arrow_circle_left"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/back_to_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_restaurant_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FC3F1B"
        android:paddingHorizontal="6dp"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/restaurant_image">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Le Zinc" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_detail_star1"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_star_empty"
            app:layout_constraintLeft_toRightOf="@id/restaurant_name"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/yellow" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_detail_star2"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:src="@drawable/ic_star_empty"
            app:layout_constraintLeft_toRightOf="@id/iv_detail_star1"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/yellow" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_detail_star3"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:src="@drawable/ic_star_empty"
            app:layout_constraintLeft_toRightOf="@id/iv_detail_star2"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/yellow" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/restaurant_desc1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name"
            tools:text="French restaurant - 12 rue du faubourg Poissonière" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_restaurant_chosen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/fab_choose_restaurant"
        android:src="@drawable/ic_check_circle"
        app:backgroundTint="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/restaurant_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_call"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_call"
        app:icon="@drawable/ic_call"
        app:iconGravity="top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_rate"
        app:layout_constraintTop_toBottomOf="@id/layout_restaurant_details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_rate"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_like"
        app:icon="@drawable/ic_star_filled"
        app:iconGravity="top"
        app:layout_constraintLeft_toRightOf="@id/button_call"
        app:layout_constraintRight_toLeftOf="@id/button_website"
        app:layout_constraintTop_toBottomOf="@id/layout_restaurant_details" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_website"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_website"
        app:icon="@drawable/ic_public"
        app:iconGravity="top"
        app:layout_constraintLeft_toRightOf="@id/button_rate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_restaurant_details" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#c0c0c0"
        app:layout_constraintTop_toBottomOf="@id/button_call" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_workmates_for_one_restaurant"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_call" />

</androidx.constraintlayout.widget.ConstraintLayout>