...
    <ImageView
        android:id="@+id/icon_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_person_outline_24"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_num_workmates"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_distance" />


    <TextView
        android:id="@+id/item_restaurant_num_workmates"
        style="item_restaurant"
...
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_image"
        app:layout_constraintTop_toBottomOf="@id/item_restaurant_num_workmates"
        app:tint="@color/yellow" />


    <TextView
        android:id="@+id/item_restaurant_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/item_restaurant_distance"
...
